Turn on bouncycastle decryption for Snowflake
Stronger keys that were generated using OpenSSL V3 can't be decrypted
without it by Snowflake JDBC driver